# RagPipeline-Classic

./: README.md  main.py  pyproject.toml
app/: api.py  config.py  embedding.py  genration.py  ingetion.py  reranker.py  retrieval.py
