[project]
name = "ragpipeline-classic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "app>=0.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "langchain-groq>=1.1.2",
    "pinecone>=8.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.1",
    "uvicorn>=0.41.0",
]
